<resources>
    <string name="app_name">BLE_Debug</string>
    <string name="id">ID</string>
    <string name="age">Age</string>
    <string name="save">Save</string>
    <string name="mandatory">This field is mandatory</string>
    <string name="maximun_val">The maximun value is 127</string>
    <string name="hint_gender">Gender</string>
    <string name="male">Male</string>
    <string name="email">Email</string>
    <string name="sync">Synchronize</string>
    <string name="sendE">Send Data</string>
    <string name="init">Init</string>
    <string name="req">Request Activity</string>
    <string name="female">Female</string>
    <string name="hint_laterality">Laterality</string>
    <string name="right">Right</string>
    <string name="left">Left</string>
    <string name="raw">Raw Data</string>
    <string name="battery_rate">Battery rate (min)</string>
    <string name="activity">Activity</string>
    <string name="device">Device:</string>
    <string name="no_device">&lt;Select a device&gt;</string>
    <string name="select_device">Select a device</string>
    <string name="status">Status</string>
    <string name="llsWrite">LinkLossAlert</string>
    <string name="sample_rate">Sample rate (Hz)</string>
    <string name="iasWrite">ImmediateAlert</string>
    <string name="scanning">Scanning for devices...</string>
    <string name="no_ble_devices">No LE devices found.</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Not connected</string>
    <string name="ready">Ready</string>
    <string name="disconnect">Disconnect</string>
    <string name="connect">Connect</string>
    <string name="unpair">unpair</string>
    <string name="pair">pair</string>
    <string name="RadioButton1">Alert level high</string>
    <string name="RadioButton2">Alert level mid</string>
    <string name="RadioButton3">Stop alerting</string>
    <string name="SystemId">SystemId</string>
    <string name="ModelNumber">ModelNumber</string>
    <string name="SerialNumber">SerialNumber</string>
    <string name="FirmwareRevision">FirmwareRevision</string>
    <string name="HardwareRevision">HardwareRevision</string>
    <string name="SoftwareRevision">SoftwareRevision</string>
    <string name="ManufactureName">ManufactureName</string>
    <string name="RegCertDataList">RegCertDataList</string>
    <string name="ManufactureId">ManufactureId</string>
    <string name="BatteryLevel">Battery Level</string>
    <string name="OrgId">OrganizationId</string>
    <string name="Txpower">Txpower Level</string>
    <string name="Noupdate">No Update</string>
    <string name="debug">Debug</string>
    <string name="hint_system">System Select</string>
    <string name="FSM">FSM</string>
    <string name="MLP">MLP</string>
    <string name="ReadTxPower">ReadTxPower</string>
    <string name="high_alert">HIGH Alert triggered!</string>
    <string name="low_alert">LOW Alert triggered!</string>
    <string name="writeTxnoti">TxNoti</string>
    <string name="readRssi">Read Rssi Value</string>
    <string name="Readdummy">D Read</string>
    <string name="removeBond">Remove Bond</string>
    <string name="paired">paired</string>
    <string name="popup_title">Quit nRF UART</string>
    <string name="popup_message">Do you want to quit this Application?</string>
    <string name="popup_yes">YES</string>
    <string name="popup_no">NO</string>
    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>
    <string name="scan">Scan</string>
    <string name="cancel">Cancel</string>
</resources>
