<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ic_launcher_background"
        android:elevation="@dimen/elevation_toolbar"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        tools:ignore="UnusedAttribute" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="7dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/buttonConnect"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/connect"
            android:theme="@style/AccentButton" />

        <Button
            android:id="@+id/buttonSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sendE"
            android:theme="@style/AccentButton" />

        <Button
            android:id="@+id/buttonDebug"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/debug"
            android:theme="@style/AccentButton" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textLabel"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:textSize="17sp"
            android:gravity="center"
            android:text="@string/BatteryLevel"/>

        <ProgressBar
            android:id="@+id/batteryLevel"
            style="@style/MyProgressBarTwo"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:indeterminate="false"
            android:max="100"
            android:progress="0" />

        <TextView
            android:id="@+id/textLevel"
            android:layout_width="50dp"
            android:layout_height="30dp"
            android:gravity="center"
            android:textSize="17sp" />
    </LinearLayout>


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_sample"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/sample_rate"
                app:errorTextAppearance="@style/AppTheme.EditTextError">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_sample"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:text="" />
            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/text_input_layout_battery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/battery_rate"
                app:errorTextAppearance="@style/AppTheme.EditTextError">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/editText_battery"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:inputType="numberDecimal"
                    android:text="" />
            </android.support.design.widget.TextInputLayout>
        </TableRow>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp">

            <TextView
                android:id="@+id/system_select"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="25dp"
                android:text="@string/hint_system"
                android:textSize="20dp"/>
            <RadioGroup
                android:id="@+id/sys_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/system_select"
                android:orientation="horizontal">
                <RadioButton
                    android:id="@+id/FSM_radio_btn"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text="@string/FSM"
                    android:textSize="20dp"/>
                <RadioButton
                    android:id="@+id/MLP_radio_btn"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:text = "@string/MLP"
                    android:textSize="20dp"/>
            </RadioGroup>
        </RelativeLayout>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_weight="1"
                android:gravity="bottom"
                android:paddingRight="35dp"
                android:scrollbars="vertical"
                android:textSize="12sp" />
        </TableRow>
    </TableLayout>
</LinearLayout>